tests/error/13.program
{
    a = 5;
    b_s = "123";
    a_s = b_s + b_s + b_s * a;
}