tests/error/13.out
Parser: сompilation error - syntax error, unexpected '*', expecting ';' or '+' near line 4
